<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/update_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_popup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_item"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold|italic"/>
            <EditText
                android:id="@+id/itemName_popup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name_popup"
                android:gravity="center"
                android:layout_below="@id/title_popup_id"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/itemQyt_popup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_quantity_popup"
                android:gravity="center"
                android:layout_below="@id/itemName_popup_id"/>
            <EditText
                android:id="@+id/itemExpiry_popup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_expiry_date_popup"
                android:gravity="center"
                android:layout_below="@id/itemQyt_popup_id"/>

            <Button
                android:id="@+id/update_btn_popup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_update_item_pop"
                android:textAllCaps="false"
                android:layout_below="@id/itemExpiry_popup_id"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>