<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pop_text_alert"
                android:text="@string/sure_text_pop"
                android:textSize="23dp"
                android:layout_centerHorizontal="true"
                android:padding="6dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/conf_no_btn"
                android:text="@string/pop_no_btn"
                android:textAllCaps="false"
                android:layout_marginTop="22dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/conf_yes_btn"
                android:text="@string/pop_yes_btn"
                android:textAllCaps="false"
                android:layout_marginTop="22dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>