<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardBackgroundColor="#FFFEEE"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="8dp"
    app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <TextView
                android:id="@+id/odName_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="Name: " />

            <TextView
                android:id="@+id/od_product_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/odName_ID"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/odName_ID"
                android:fontFamily="@font/roboto_slab_regular"
                android:text="Product Name"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/od_time_insert_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/od_product_name_id"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="Insert To Cart: " />

            <TextView
                android:id="@+id/od_order_time_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/od_time_insert_id"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/od_time_insert_id"
                android:text="@string/inserted_to_cart_on"
                android:textColor="@android:color/black"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/od_total_Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/od_time_insert_id"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/price_quantity" />

            <TextView
                android:id="@+id/od_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/od_total_Tv"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/od_total_Tv"
                android:fontFamily="@font/roboto_slab_regular"
                android:text="@string/total_price"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </RelativeLayout>

</androidx.cardview.widget.CardView>