<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserPayment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/payment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Payment Detailed"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="288dp"
        android:layout_height="144dp"
        android:layout_marginTop="24dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_toolbar"
        app:srcCompat="@drawable/credit_card_image"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal_payment"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/discount_payment"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/shipping_payment"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/sub_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$ 0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="$ 0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/sub_total"
        app:layout_constraintStart_toStartOf="@+id/sub_total"
        app:layout_constraintTop_toBottomOf="@+id/sub_total" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="$ 0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <View
        android:id="@+id/divider5"
        android:layout_width="430dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="Total"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <TextView
        android:id="@+id/total_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$ 00"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView_ShippsTo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Address: "
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/total_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Items"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/total_item_tv"
        app:layout_constraintEnd_toEndOf="@+id/total_amt"
        app:layout_constraintTop_toBottomOf="@+id/textView_ShippsTo_id" />

    <TextView
        android:id="@+id/total_item_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Items: "
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView_ShippsTo_id"
        app:layout_constraintTop_toBottomOf="@+id/textView_ShippsTo_id" />

    <TextView
        android:id="@+id/address_tot_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:maxLines="@android:integer/config_longAnimTime"
        android:text="Address"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView_ShippsTo_id"
        app:layout_constraintEnd_toEndOf="@+id/total_amt"
        app:layout_constraintStart_toEndOf="@+id/textView_ShippsTo_id"
        app:layout_constraintTop_toTopOf="@+id/textView_ShippsTo_id" />

    <Button
        android:id="@+id/pay_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Check Out"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>